[doc] Update release notes (#4794) Java 22